Fix Flex-row on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -336,9 +336,14 @@ p {
     opacity: 0.5;
 }
 
-@media only screen and (min-width:30rem) {
-    .flex-row {
+.flex-row {
         display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+@media only screen and (min-width:60rem) {
+    .flex-row {
         flex-direction: row;
         justify-content: space-between;
     }
